--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,9 @@ body {
 .board {
   display: flex;
   flex-wrap: wrap;
-  height: 600px;
-  width: 600px;
+  height: 610px;
+  width: 610px;
+  border: 5px solid black;
 }
 
 .grid {
@@ -35,6 +36,7 @@ body {
 .inner-board-container {
   text-align: center;
   color: whitesmoke;
+  font-weight: bold;
 }
 .board button:hover {
   /* color: whitesmoke; */
