--- a/src/dragAndDrop.css
+++ b/src/dragAndDrop.css
@@ -11,45 +11,34 @@
   height: 626px;
   width: auto;
   background-color: transparent;
-  border: 1px solid black;
+  border: none;
   padding: 5px;
+
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 5px;
+
 
 }
 
 
 .ship {
     background-color: black;
-    height: 60px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    display: flex;
+    width: auto;
+    flex-direction: row;
 }
 
-#ship-1 {
+.cell {
+    background-color: grey;
+    height: 60px;
     width: 60px;
 }
 
-#ship-2 {
-    width: 120px;
-}
-
-#ship-3{
-    width: 180px;
-}
-
-#ship-4{
-    width: 240px;
-}
-
-#ship-5{
-    width: 300px;
-}
-
 .highlight {
-    background: rgb(233,102,102);
+    background: rgb(63, 96, 215)!important;
 }
 
-.target {
-    border: solid 10px  rbg(169,56,56);
-    box-sizing: border-box;
-}
