--- a/src/welcomePage.css
+++ b/src/welcomePage.css
@@ -29,7 +29,7 @@ body {
   backdrop-filter: blur(3px); /* Blur effect */
 }
 
-.screen.welcome {
+.welcome {
   width: 100%;
   height: 100vh;
   /* background: blue; */
@@ -43,7 +43,7 @@ body {
 }
 
 .welcome-container h1 {
-  font-size: 200px;
+  font-size: 150px;
 }
 
 .welcome-container p {
@@ -76,26 +76,28 @@ body {
 }
 
 .button-class {
-  padding: 1em 2em;
+  font-family: 'pixelButtonFont', Arial, sans-serif;
+  padding: .5em 1em;
   border: none;
   border-radius: 5px;
   font-weight: bold;
   letter-spacing: 5px;
   text-transform: uppercase;
   cursor: pointer;
-  color: #0ea5e9;
+  color: whitesmoke; /* Text color */
   transition: all 1000ms;
-  font-size: 15px;
+  font-size: 20px;
   position: relative;
   overflow: hidden;
-  outline: 2px solid #0ea5e9;
+  outline: 2px solid whitesmoke; /* Initial outline color */
+  background-color: transparent; /* Transparent background */
 }
 
 .button-class:hover {
-  color: #ffffff;
+  color: #fff; /* Text color on hover */
   transform: scale(1.1);
-  outline: 2px solid #0ea5e9;
-  box-shadow: 4px 5px 17px -4px #0ea5e9;
+  outline: 2px solid whitesmoke; /* Hover outline color */
+  box-shadow: 4px 5px 17px -4px #252525; /* Hover box shadow */
 }
 
 .button-class::before {
@@ -105,7 +107,7 @@ body {
   top: 0;
   width: 0;
   height: 100%;
-  background-color: #0ea5e9;
+  background-color: #252525; /* Color scheme background */
   transform: skewX(45deg);
   z-index: -1;
   transition: width 1000ms;
